--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,8 +10,8 @@
     </head>
     <body>
         <nav>
-            <div class="nav-wrapper">
-                <a href="#" class="brand-logo"><img src="{{ asset('images/logoTrans.png') }}" alt=""></a>
+            <div class="nav-wrapper cyan lighten-3">
+                <a href="#" class="brand-logo"><img src="{{ asset('images/logoTrans2.png') }}" alt=""></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                         <li>
