Ajout livre par annonce

--- a/app/Resources/views/book/annonces.html.twig
+++ b/app/Resources/views/book/annonces.html.twig
@@ -1,5 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+    <h1>coucou</h1>
+    <p>brrkghlrgbor</p>
+    <div class="row">
+        {% for annonce in annonces %}
+            <p>bleu</p>
+        {% endfor %}
+    </div>
 {% endblock %}
