--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,9 +9,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     </head>
     <body>
-        <nav>
+        <nav class="cyan lighten-2">
             <div class="nav-wrapper">
-                <a href="{{ path('homepage') }}" class="brand-logo">Logo</a>
+                <a href="{{ path('homepage') }}" class="brand-logo"><img src="{{ asset('images/logoTrans2.png') }}" alt=""></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                         <li>
