--- a/app/Resources/views/book/annonces.html.twig
+++ b/app/Resources/views/book/annonces.html.twig
@@ -7,6 +7,7 @@
             <p>Prix du lot : {{ annonce.annonce.price }}</p>
             <p>Quantité : {{ annonce.qte }}</p>
             <h6>{{ annonce.annonce.description }}</h6>
+            <a class="waves-effect waves-light btn">Faire une proposition</a>
         {% endfor %}
     </div>
 {% endblock %}
