Did delete the UD from CRUD , then Leaves CR only && added the search method & the view

--- a/app/Resources/views/book/search.html.twig
+++ b/app/Resources/views/book/search.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>coucou</h1>
+    <h1>supposed to be the search page for books</h1>
 {% endblock %}
