--- a/app/Resources/views/user/annonces.html.twig
+++ b/app/Resources/views/user/annonces.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Les plus récentes : </h2>
+    <h2>Mes annonces : </h2>
     <div class="row">
         {% for annonce in annonces %}
             <div class="col s12 m4">
