--- a/app/Resources/views/annonce/view.html.twig
+++ b/app/Resources/views/annonce/view.html.twig
@@ -2,6 +2,28 @@
 
 {% block body %}
     <div class="row">
-
+        <div class="col s12">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <p>{{ annonce.user }}</p>
+                    <p>{{ annonce.city }}</p>
+                    <p>{{ annonce.createdAt|date('d/m/Y à H:i') }}</p>
+                    <span class="card-title">{{ annonce.title }}</span>
+                    <span>{{ annonce.libelle }}</span>
+                    <p>Par : {{ annonce.author }}</p>
+                    <p>Genre : {{ annonce.type }}</p>
+                    <p>Description : <br/>{{ annonce.description }}</p>
+                    <br/>
+                    <p>Prix : {{ annonce.price }} €</p>
+                </div>
+                <div class="card-action">
+                    {% if annonce.user.email is defined  %}
+                    <a href="mailto:{{ annonce.user.email }}">contacter par E-mail</a>
+                    {% elseif annonce.user.tel is defined %}
+                    <a href="#">{{ annonce.user.tel }}</a>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
