--- a/app/Resources/views/form_themes/checkbox.html.twig
+++ b/app/Resources/views/form_themes/checkbox.html.twig
@@ -1,12 +1,37 @@
 {% block checkbox_widget %}
     <label for="{{ id }}">
-        <input type="checkbox" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
+        <input class="filled-in" type="checkbox" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
         <span>{{ label }}</span>
     </label>
 {% endblock %}
 
-{#{% block form_label %}#}
-    {#{% if 'checkbox' not in block_prefixes %}#}
-        {#{{ parent() }}#}
-    {#{% endif %}#}
-{#{% endblock form_label %}#}
+{%- block form_label -%}
+    {% if 'checkbox' not in block_prefixes %}
+        {% if label is not same as(false) -%}
+            {% if not compound -%}
+                {% set label_attr = label_attr|merge({'for': id}) %}
+            {%- endif -%}
+            {% if required -%}
+                {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' required')|trim}) %}
+            {%- endif -%}
+            {% if label is empty -%}
+                {%- if label_format is not empty -%}
+                    {% set label = label_format|replace({
+                        '%name%': name,
+                        '%id%': id,
+                    }) %}
+                {%- else -%}
+                    {% set label = name|humanize %}
+                {%- endif -%}
+            {%- endif -%}
+            <{{ element|default('label') }}{% if label_attr %}{% with { attr: label_attr } %}{{ block('attributes') }}{% endwith %}{% endif %}>
+            {%- if translation_domain is same as(false) -%}
+                {{- label -}}
+            {%- else -%}
+                {{- label|trans({}, translation_domain) -}}
+            {%- endif -%}
+            </{{ element|default('label') }}>
+        {%- endif -%}
+    {% endif %}
+{%- endblock form_label -%}
+
