Can't delete when not your annonce

--- a/app/Resources/views/annonce/view.html.twig
+++ b/app/Resources/views/annonce/view.html.twig
@@ -15,6 +15,7 @@
                     <p>Description : <br/>{{ annonce.description }}</p>
                     <br/>
                     <p>Prix : {{ annonce.price }} €</p>
+                    <a href="{{ annonce.googlify }}" target="_blank">Voir sur Google</a>
                 </div>
                 <div class="card-action">
                     {% if annonce.user.email is defined  %}
