--- a/app/Resources/views/annonce/all.html.twig
+++ b/app/Resources/views/annonce/all.html.twig
@@ -7,7 +7,7 @@
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
                         <span class="card-title">{{ annonce.title }}</span>
-                        <p>{{ annonce.description }}</p>
+                        <p class="truncate">{{ annonce.description }}</p>
                         <br/>
                         <p>{{ annonce.createdAt|date('d/m/Y à H:i') }}</p>
                     </div>
