--- a/app/Resources/views/user/annonces.html.twig
+++ b/app/Resources/views/user/annonces.html.twig
@@ -5,17 +5,19 @@
     <div class="row">
         {% for annonce in annonces %}
             <div class="col s12 m4">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">{{ annonce.title }}</span>
-                        <p class="truncate">{{ annonce.description }}</p>
-                        <br/>
-                        <p>{{ annonce.createdAt|date('d/m/Y à H:i') }}</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="{{ path('annonce_view', {'id': annonce.id}) }}">Voir l'annonce</a>
-                        <br/>
-                        <a href="{{ path('delete_annonce', {'id': annonce.id}) }}">Supprimer l'annonce</a>
+                <div class="card-medium">
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">{{ annonce.title }}</span>
+                            <p class="truncate">{{ annonce.description }}</p>
+                            <br/>
+                            <p>{{ annonce.createdAt|date('d/m/Y à H:i') }}</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="{{ path('annonce_view', {'id': annonce.id}) }}">Voir l'annonce</a>
+                            <br/>
+                            <a href="{{ path('delete_annonce', {'id': annonce.id}) }}">Supprimer l'annonce</a>
+                        </div>
                     </div>
                 </div>
             </div>
